--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <div class="w-screen h-screen bg-slate-500 dark:bg-orange-400 dark:caret-lime-400">
-    container
-    <div class=" mt-20">
+    INDEX PAGE
+    <div class="mt-20">
       <popup-info></popup-info>
     </div>
+    <button class="btn primary">按钮</button>
   </div>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
