--- a/src/about/index.html
+++ b/src/about/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  ABOUT
+  ABOUT PAGE
   <script type="module" src="index.js"></script>
 </body>
 </html>
